form align issue

--- a/src/blocks/form/style.scss
+++ b/src/blocks/form/style.scss
@@ -22,6 +22,7 @@
 	margin: 0 -5px;
 	align-items: flex-end;
 	position: relative;
+	text-align: left;
 	.required {
 		color: #E53E3E;
 		margin-left: 5px;
